# dmlvis

./: .env  .gitignore  LICENSE  Notes.md  Pipfile  README.md  dev.py  mypy.ini  pylama.ini  pyproject.toml  pytest.ini  setup.cfg
dmlsrim/: .gitattributes  .gitignore  LICENSE  Pipfile  README.md  mypy.ini  setup.cfg  workplan.md
dmlsrim/src/: calc.py  log.py  main.py
dmlsrim/src/data/ceria/2019_07_11_1058PM/He_1_0MeV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
dmlsrim/src/data/ceria/2019_07_11_1058PM/He_2_0MeV/: E2RECOIL.txt  IONIZ.txt  PHONON.txt  TDATA.txt  TRIM.IN  VACANCY.txt
dmlsrim/src/data/ceria/2019_07_11_1058PM/He_3_0MeV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
dmlsrim/src/data/ceria/2019_07_11_1110PM/He_1_0MeV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
dmlsrim/src/data/ceria/2019_07_11_1110PM/He_2_0MeV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
dmlsrim/src/data/ceria/2019_07_11_1110PM/He_3_0MeV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
dmlsrim/src/data/ceria/2019_07_11_1112PM/He_1_0MeV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
dmlsrim/src/data/ceria/2019_07_11_1112PM/He_2_0MeV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
dmlsrim/src/data/ceria/2019_07_11_1112PM/He_3_0MeV/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  PHONON.txt  RANGE.txt  TDATA.txt  TRIM.IN  VACANCY.txt
dmlsrim/src/logs/: profile_10-7-2019.prof  profile_16-10-2018.prof  profile_18-10-2018.prof  profile_24-10-2018.prof
dmlsrim/src/mytypes/: __init__.py  srim.pyi
dmlsrim/src/settings/: default_settings.json  my_settings.json  settings.json
src/: adjust_gamma.py  center_of_shape.py  detect_color.py  detect_shapes.py  dmlutils.py  dmlutils0.py  dropI.py  dropI0.py  dropL.py  dropS.py  dropV.py  dropV0.py  dropV_0.py  dropV_1.py  dropV_2py  dropgui.py  dropgui2.py  images2gif.py  max_filter.py  n.py  object_size.py  t.py  tkinter_test.py
src/mytypes/: __init__.py
src/mytypes/numpy/: __init__.pyi
src/pyimagesearch/: colorlabeler.py  shapedetector.py
