[tool.poetry]
name = "dmlvis"
version = "0.1.0"
description = ""
authors = ["dml"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.1"
pillow = "^6.0"
matplotlib = "^3.1"
# keras = "^2.2"
# scikit-learn = "^0.21.2"


[tool.poetry.dev-dependencies]
pylama = "^7.7"
pytest = "^4.5"
mypy = "^0.701.0"
mccabe = "^0.6.1"
pytest-cov = "^2.7"
pytest-sugar = "^0.9.2"
autopep8 = "^1.4"
flake8 = "^3.7"
pytest-xdist = "^1.28"

