[tool.poetry]
name = "dmlvis"
version = "0.1.0"
description = ""
authors = ["dml"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "*" # brings numpy
matplotlib = "*"  # brings numpy
# typing-extensions = "*"
pillow = "*"
imutils = "*"
# pysimplegui = "*"
# pyyaml = ">=4.2"
python-dotenv = "*"
# boltons = "*"
# keras = "*"
# sklearn = "*"
numpy = "*"  # ">=1.19.4"
# scipy = "*"
# imageio = "*"
# pygifsicle = "*"
# ordered-set = "*"
# ordered-set-stubs = "*"
# plantcv = "*"
# sklearn = "*"


[tool.poetry.dev-dependencies]
# cython = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-sugar = "*"
pytest-xdist = "*"
pylama = "*"
mccabe = "*"
autopep8 = "*"
flake8 = "*"
flake8-comprehensions = "*"
flake8-bugbear = "*"
# pdbpp = "*"
# pyinstaller = "*"
gitpython = "*"



